diesel_compile_tests/tests/fail/aggregate_expressions_disallow_unsupported_features_on_mysql.stderr
error[E0277]: `diesel::expression::functions::aggregate_expressions::aggregate_filter::Filter<diesel::query_builder::where_clause::WhereClause<diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<columns::name, diesel::expression::bound::Bound<diesel::sql_types::Text, &str>>>>>` is no valid SQL fragment for the `Mysql` backend
  --> tests/fail/aggregate_expressions_disallow_unsupported_features_on_mysql.rs:17:28
   |
17 |         .get_result::<i64>(&mut conn)
   |          ----------        ^^^^^^^^^ unsatisfied trait bound
   |          |
   |          required by a bound introduced by this call
   |
   = help: the trait `QueryFragment<Mysql, NoAggregateFunctionExpressions>` is not implemented for `diesel::expression::functions::aggregate_expressions::aggregate_filter::Filter<diesel::query_builder::where_clause::WhereClause<diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<columns::name, diesel::expression::bound::Bound<diesel::sql_types::Text, &str>>>>>`
   = note: this usually means that the `Mysql` database system does not support
           this SQL syntax
   = help: the following other types implement trait `QueryFragment<DB, SP>`:
             `diesel::expression::functions::aggregate_expressions::aggregate_filter::Filter<P>` implements `QueryFragment<DB, PostgresLikeAggregateFunctionExpressions>`
             `diesel::expression::functions::aggregate_expressions::aggregate_filter::Filter<P>` implements `QueryFragment<DB>`
   = note: required for `diesel::expression::functions::aggregate_expressions::aggregate_filter::Filter<diesel::query_builder::where_clause::WhereClause<diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<columns::name, diesel::expression::bound::Bound<diesel::sql_types::Text, &str>>>>>` to implement `QueryFragment<Mysql>`
   = note: 4 redundant requirements hidden
   = note: required for `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::SelectClause<diesel::expression::functions::aggregate_expressions::AggregateExpression<diesel::expression::count::count_utils::count<diesel::sql_types::Integer, columns::id>, diesel::expression::functions::aggregate_expressions::prefix::NoPrefix, diesel::expression::functions::aggregate_expressions::aggregate_order::NoOrder, diesel::expression::functions::aggregate_expressions::aggregate_filter::Filter<diesel::query_builder::where_clause::WhereClause<diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<columns::name, diesel::expression::bound::Bound<diesel::sql_types::Text, &str>>>>>>>>` to implement `QueryFragment<Mysql>`
   = note: required for `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::SelectClause<diesel::expression::functions::aggregate_expressions::AggregateExpression<diesel::expression::count::count_utils::count<diesel::sql_types::Integer, columns::id>, diesel::expression::functions::aggregate_expressions::prefix::NoPrefix, diesel::expression::functions::aggregate_expressions::aggregate_order::NoOrder, diesel::expression::functions::aggregate_expressions::aggregate_filter::Filter<diesel::query_builder::where_clause::WhereClause<diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<columns::name, diesel::expression::bound::Bound<diesel::sql_types::Text, &str>>>>>>>>` to implement `LoadQuery<'_, diesel::MysqlConnection, i64>`
note: required by a bound in `get_result`
  --> $DIESEL/src/query_dsl/mod.rs
   |
   |     fn get_result<'query, U>(self, conn: &mut Conn) -> QueryResult<U>
   |        ---------- required by a bound in this associated function
   |     where
   |         Self: LoadQuery<'query, Conn, U>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::get_result`

error[E0277]: `diesel::expression::functions::aggregate_expressions::aggregate_order::Order<columns::name, false>` is no valid SQL fragment for the `Mysql` backend
  --> tests/fail/aggregate_expressions_disallow_unsupported_features_on_mysql.rs:23:28
   |
23 |         .get_result::<i64>(&mut conn)
   |          ----------        ^^^^^^^^^ unsatisfied trait bound
   |          |
   |          required by a bound introduced by this call
   |
   = help: the trait `QueryFragment<Mysql, NoAggregateFunctionExpressions>` is not implemented for `diesel::expression::functions::aggregate_expressions::aggregate_order::Order<columns::name, false>`
   = note: this usually means that the `Mysql` database system does not support
           this SQL syntax
   = help: the following other types implement trait `QueryFragment<DB, SP>`:
             `diesel::expression::functions::aggregate_expressions::aggregate_order::Order<E, false>` implements `QueryFragment<DB, PostgresLikeAggregateFunctionExpressions>`
             `diesel::expression::functions::aggregate_expressions::aggregate_order::Order<E, false>` implements `QueryFragment<DB>`
             `diesel::expression::functions::aggregate_expressions::aggregate_order::Order<E, true>` implements `QueryFragment<DB>`
   = note: required for `diesel::expression::functions::aggregate_expressions::aggregate_order::Order<columns::name, false>` to implement `QueryFragment<Mysql>`
   = note: 4 redundant requirements hidden
   = note: required for `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::SelectClause<diesel::expression::functions::aggregate_expressions::AggregateExpression<diesel::expression::count::count_utils::count<diesel::sql_types::Integer, columns::id>, diesel::expression::functions::aggregate_expressions::prefix::NoPrefix, diesel::expression::functions::aggregate_expressions::aggregate_order::Order<columns::name, false>>>>` to implement `QueryFragment<Mysql>`
   = note: required for `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::SelectClause<diesel::expression::functions::aggregate_expressions::AggregateExpression<diesel::expression::count::count_utils::count<diesel::sql_types::Integer, columns::id>, diesel::expression::functions::aggregate_expressions::prefix::NoPrefix, diesel::expression::functions::aggregate_expressions::aggregate_order::Order<columns::name, false>>>>` to implement `LoadQuery<'_, diesel::MysqlConnection, i64>`
note: required by a bound in `get_result`
  --> $DIESEL/src/query_dsl/mod.rs
   |
   |     fn get_result<'query, U>(self, conn: &mut Conn) -> QueryResult<U>
   |        ---------- required by a bound in this associated function
   |     where
   |         Self: LoadQuery<'query, Conn, U>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::get_result`
